[package]
name = "hdb"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
ctrlc = "3.5.0"
iced-x86 = "1.21.0"
libc = "0.2.176"
nix = { version = "0.30.1", features = ["personality", "ptrace", "uio"] }
parse_int = "0.9.0"
reedline = "0.42.0"
thiserror = "2.0.17"

[dev-dependencies]
tempfile = "3.23.0"
